add dummytool test project{